--- a/UserApp/Views/Pages/Book/BookPage.xaml
+++ b/UserApp/Views/Pages/Book/BookPage.xaml
@@ -5,27 +5,246 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:UserApp.Views.Pages.Book"
       xmlns:vm="clr-namespace:UserApp.ViewModels.BookVM"
+      xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
       mc:Ignorable="d" 
-      d:DesignHeight="1080" d:DesignWidth="1920"
+      Loaded="Page_Loaded"
+      d:DesignWidth="1920"
       Title="BookPage">
 
     <d:Page.DataContext>
         <vm:BookViewModel/>
     </d:Page.DataContext>
 
-    <ScrollViewer>
-        <Grid>
-            <Image Source="/Resources/Book/background.png" Stretch="Fill"/>
-            <Image Source="{Binding SelectedBook.CoverImagePath}" VerticalAlignment="Top" HorizontalAlignment="Left"
-                   Width="426" Height="667" Margin="50,80,0,0"/>
-            <StackPanel Margin="534,80,0,0">
-                <TextBlock Text="{Binding SelectedBook.Title}" Style="{StaticResource h1}"/>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Автор: " Style="{StaticResource title}"/>
-                    <TextBlock Text="{Binding SelectedBook.Author.Name}" Style="{StaticResource h1}"/>
-                </StackPanel>
-                <TextBlock Text="{Binding SelectedBook.Title}" Style="{StaticResource h1}"/>
-            </StackPanel>
+    <Grid Height="1080">
+        <Image Source="/Resources/Book/background.png" Stretch="Fill"/>
+        <Grid x:Name="UserPanel" Visibility="Collapsed">
+            <ScrollViewer>
+                <Grid>
+                    <Image Source="{Binding SelectedBook.CoverImagePath}" VerticalAlignment="Top" HorizontalAlignment="Left"
+Width="426" Height="667" Margin="50,80,0,0"/>
+                    <StackPanel Margin="534,80,0,0">
+                        <TextBlock Text="{Binding SelectedBook.Title}" Style="{StaticResource h1}"/>
+                        <StackPanel Orientation="Horizontal" Margin="0,40,0,0">
+                            <TextBlock Text="Автор: " Style="{StaticResource title}" FontSize="48"/>
+                            <TextBlock Text="{Binding SelectedBook.Author.Name}" Style="{StaticResource discription}" FontSize="48"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,40,0,0">
+                            <TextBlock Text="Жанр: " Style="{StaticResource title}" FontSize="48"/>
+                            <TextBlock Text="{Binding SelectedBook.Genre}" Style="{StaticResource discription}" FontSize="48"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="0,40,0,0">
+                            
+                            
+                        </StackPanel>
+                        <TextBlock Text="Описание: " Style="{StaticResource title}" FontSize="40"/>
+                        <TextBlock Text="{Binding SelectedBook.Description}" HorizontalAlignment="Left" Style="{StaticResource discription}" Width="1150" FontSize="40"/>
+                    </StackPanel>
+                    <StackPanel Width="426" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="58,788,0,0">
+                        <Button Height="90" Style="{StaticResource RoundedButtonStyle}">
+                            <Button.Content>
+                                <TextBlock Text="Слушать" Style="{StaticResource btnText}"/>
+                            </Button.Content>
+                        </Button>
+                        <Button Margin="0,20,0,0" Height="90" Style="{StaticResource RoundedButtonStyle}">
+                            <Button.Content>
+                                <TextBlock Text="Читать" Style="{StaticResource btnText}"/>
+                            </Button.Content>
+                        </Button>
+                    </StackPanel>
+                    <wv2:WebView2 Name="webView" Margin="0,0,0,0" Grid.Row="2" Width="1430" Height="1080"/>
+                    <Grid Margin="0,2200,0,0" Height="1080">
+                        <TextBlock Text="Мои заметки" Style="{StaticResource h1}" Margin="50"/>
+
+                        <Grid Width="1550" Margin="0,170,0,0" VerticalAlignment="Top" Height="270">
+                            <Grid.Effect>
+                                <DropShadowEffect BlurRadius="30"/>
+                            </Grid.Effect>
+                            <Grid.Clip>
+                                <RectangleGeometry RadiusX="15" RadiusY="30" Rect="0,0,1550,270"/>
+                            </Grid.Clip>
+
+                            <TextBox Text="fsdg" Margin="15" BorderThickness="0" Background="White" FontSize="36"
+                          Foreground="Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Montserrat Alternates"/>
+                        </Grid>
+                        <ListView ItemsSource="{Binding CurrentUser.MyThoughts}"
+   Margin="50,500,50,20" 
+   Background="Transparent">
+                            <ListView.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <UniformGrid Columns="3"/>
+                                </ItemsPanelTemplate>
+                            </ListView.ItemsPanel>
+
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid Height="240" Margin="0,0,0,10">
+                                        <Grid.Effect>
+                                            <DropShadowEffect BlurRadius="20"/>
+                                        </Grid.Effect>
+                                        <Border Margin="5" 
+                 CornerRadius="15" 
+                 Style="{StaticResource RoundedBorderStyle}" 
+                 Width="{Binding ActualWidth, 
+                        Converter={StaticResource thirdOfWidthMinusMarginConverter},
+                        RelativeSource={RelativeSource AncestorType=ListView}}">
+                                            <Grid Background="White">
+                                                <TextBlock Text="{Binding Text}" 
+                            Margin="5" 
+                            Style="{StaticResource discription}"
+                            VerticalAlignment="Center" 
+                            HorizontalAlignment="Center"/>
+                                            </Grid>
+                                        </Border>
+                                    </Grid>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </Grid>
+                </Grid>
+            </ScrollViewer>
         </Grid>
-    </ScrollViewer>
+
+        <Grid x:Name="AdminPanel" Visibility="Visible">
+            <Button Width="426" Height="667" Margin="50,80,0,0" Padding="0" Background="Transparent"
+        VerticalAlignment="Top" HorizontalAlignment="Left" Command="{Binding AddPhotoCommand}">
+                <Image Source="/Resources/Book/AuthorAddPhoto.png" Stretch="Fill"/>
+            </Button>
+            <Image Source="{Binding PhotoPath}" VerticalAlignment="Top" HorizontalAlignment="Left"
+Width="426" Height="667" Margin="50,80,0,0"/>
+            <StackPanel Margin="534,80,0,0">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Text="Название:" Style="{StaticResource h1}"/>
+                    <Border Style="{StaticResource RoundedBorderStyle}" CornerRadius="30" Grid.Column="1">
+                        <TextBox Style="{StaticResource SearchBox}"  FontSize="80"
+                  Text="{Binding SelectedBook.Title}"/>
+                    </Border>
+                </Grid>
+                <Grid Margin="0,20,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Text="Жанр: " Style="{StaticResource h1}" FontSize="40"/>
+                    <Border Style="{StaticResource RoundedBorderStyle}" CornerRadius="15" Grid.Column="1">
+                        <TextBox Style="{StaticResource SearchBox}"  FontSize="40"
+                 Text="{Binding SelectedBook.Genre}"/>
+                    </Border>
+                </Grid>
+                
+                <TextBlock Text="Описание:" Style="{StaticResource h1}" FontSize="40"/>
+                <TextBox Style="{StaticResource SearchBox}"  FontSize="40"
+Text="{Binding SelectedBook.Description}" Height="360" VerticalScrollBarVisibility="Auto"/>
+                <ListView ItemsSource="{Binding Authors}">
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+                    <ListView.ItemTemplate>
+                        <ItemContainerTemplate>
+                            <Border CornerRadius="30" Margin="20,0,20,0" Style="{StaticResource RoundedBorderStyle}">
+                                <Button Style="{StaticResource RoundedButtonStyle}"
+    CommandParameter="{Binding}" Command="{Binding DataContext.AddAuthorCommand, RelativeSource={RelativeSource AncestorType=ListView}}"
+    Background="Transparent" Padding="0">
+                                    <Button.Content>
+                                        <Grid Width="450" Height="350">
+                                            <Image Source="/Resources/Book/background.png" Stretch="Fill"/>
+                                            <Image Width="200" Height="280"
+            VerticalAlignment="Bottom" HorizontalAlignment="Right" 
+               Source="{Binding PhotoPath}"/>
+                                            <Grid>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="372*"/>
+                                                    <ColumnDefinition Width="199*"/>
+                                                </Grid.ColumnDefinitions>
+                                                <StackPanel>
+                                                    <TextBlock Text="{Binding Name}" Style="{StaticResource title}" Margin="15,30,0,0"/>
+                                                    <TextBlock Text="{Binding InterestingFacts}" Style="{StaticResource discription}" Margin="15,30,0,0"/>
+                                                </StackPanel>
+                                            </Grid>
+                                        </Grid>
+                                    </Button.Content>
+                                </Button>
+                            </Border>
+                        </ItemContainerTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackPanel>
+            <StackPanel Width="426" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="58,788,0,0">
+                <Button Height="90" Style="{StaticResource RoundedButtonStyle}"
+                        Command="{Binding AddAudioCommand}">
+                    <Button.Content>
+                        <TextBlock Text="Добавить Аудио" Style="{StaticResource btnText}"/>
+                    </Button.Content>
+                </Button>
+                <Button Margin="0,10,0,0" Height="90" Style="{StaticResource RoundedButtonStyle}"
+                        Command="{Binding DeleteBookCommand}">
+                    <Button.Content>
+                        <TextBlock Text="Удалить" Style="{StaticResource btnText}"/>
+                    </Button.Content>
+                </Button>
+                <Button Margin="0,10,0,0" Height="90" Style="{StaticResource RoundedButtonStyle}"
+                        Command="{Binding SaveBookCommand}">
+                    <Button.Content>
+                        <TextBlock Text="Сохранить" Style="{StaticResource btnText}"/>
+                    </Button.Content>
+                </Button>
+            </StackPanel>
+            <Grid Margin="0,2200,0,0" Height="1080">
+                <TextBlock Text="Мои заметки" Style="{StaticResource h1}" Margin="50"/>
+
+                <Grid Width="1550" Margin="0,170,0,0" VerticalAlignment="Top" Height="270">
+                    <Grid.Effect>
+                        <DropShadowEffect BlurRadius="30"/>
+                    </Grid.Effect>
+                    <Grid.Clip>
+                        <RectangleGeometry RadiusX="15" RadiusY="30" Rect="0,0,1550,270"/>
+                    </Grid.Clip>
+
+                    <TextBox Text="fsdg" Margin="15" BorderThickness="0" Background="White" FontSize="36"
+                          Foreground="Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Montserrat Alternates"/>
+                </Grid>
+                <ListView ItemsSource="{Binding CurrentUser.MyThoughts}"
+   Margin="50,500,50,20" 
+   Background="Transparent">
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <UniformGrid Columns="3"/>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid Height="240" Margin="0,0,0,10">
+                                <Grid.Effect>
+                                    <DropShadowEffect BlurRadius="20"/>
+                                </Grid.Effect>
+                                <Border Margin="5" 
+                 CornerRadius="15" 
+                 Style="{StaticResource RoundedBorderStyle}" 
+                 Width="{Binding ActualWidth, 
+                        Converter={StaticResource thirdOfWidthMinusMarginConverter},
+                        RelativeSource={RelativeSource AncestorType=ListView}}">
+                                    <Grid Background="White">
+                                        <TextBlock Text="{Binding Text}" 
+                            Margin="5" 
+                            Style="{StaticResource discription}"
+                            VerticalAlignment="Center" 
+                            HorizontalAlignment="Center"/>
+                                    </Grid>
+                                </Border>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
+        </Grid>
+
+    </Grid>
 </Page>
